Fixed minor layout issues

--- a/src/meanstorisk/meanstorisk.css
+++ b/src/meanstorisk/meanstorisk.css
@@ -3,7 +3,7 @@
 }
 
 .top_section {
-	height: 400px;
+	height: 420px;
 	width: 1200px;
 }
 
